tests/remap/fail/body-ngc/rm400.ngc
o<rm400> sub
(debug, in rm400: call_level= #<_call_level> remap_level=#<_remap_level>)
#100 = [1/0]
o<rm400> endsub
m2
%
